# model-manager

./: Cargo.toml  LICENSE  README.md
docker/nemo-speech/: Dockerfile  diar_infer.yaml  server.py
src/: api.rs  config.rs  docker.rs  gguf.rs  main.rs  memory.rs
src/web/: index.html
