[package]
name = "model-manager"
version = "0.1.0"
edition = "2021"
description = "Web dashboard to manage local llama.cpp GGUF models on a single box (built for NVIDIA DGX Spark / GB10), with memory-aware OOM guarding and boot autostart."
license = "MIT"
repository = "https://github.com/Willebrew/model-manager"
readme = "README.md"
keywords = ["llama-cpp", "llm", "gguf", "dashboard", "docker"]
categories = ["command-line-utilities"]

[[bin]]
name = "model-manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.32"
bollard = "0.17"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[profile.release]
opt-level = 2
strip = true
